--- a/Projetoatt-main/curso.html
+++ b/Projetoatt-main/curso.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos preparatórios</title>
+    <link rel="stylesheet" href="css/curso.css">
 
     
 </head>
